--- a/pom.xml
+++ b/pom.xml
@@ -46,4 +46,32 @@
             <scope>test</scope>
         </dependency>
 	</dependencies>
+
+    <build>
+        <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.11.3</version>
+				<configuration>
+					<source>1.8</source>
+					<docencoding>UTF-8</docencoding>
+					<header>${project.version}</header>
+					<bottom>${project.version}</bottom>
+                    <sourceFileExcludes>
+                        <exclude>**/demo/**</exclude>
+                    </sourceFileExcludes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>javadoc_generation</id>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+        </plugins>
+    </build>
 </project>
