--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.1.0</version>
 	</parent>
 	<artifactId>rclone-sync4j</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3</version>
 
 	<name>rclone-sync4j</name>
 	<description>A Java wrapper for rclone sync.</description>
@@ -20,10 +20,11 @@
 	</scm>
 
 	<properties>
+		<maven.compiler.release>21</maven.compiler.release>
+		<!--
 		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.target>17</maven.compiler.target>-->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>17</maven.compiler.release>
 	</properties>
 
 	<dependencies>
